--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>bigger-slides</title>
     <link rel="stylesheet" href="high-bigger-slides.css">
-    <script src="http://o7m41tvmg.bkt.clouddn.com/jquery-1.12.4.min.js"></script>
+    <script src="jquery-2.1.1.min.js"></script>
 </head>
 <body>
     <div class="main">
