--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 </ul>
             </div>
         </div>
+        <footer><a href="https://Zhangkegu.github.io/Resume/work.html"><input type="button" value="回到作品页"></a></footer>
     </div>
     <p>This is a tutorialzine demo. View the <a href=""> original tutorial</a> to read and download the source files.</p>
     <p>The gallery features artwork from <a href="">rambocre, pickupjojo</a> and <a href="">codenamebender</a></p>
